--- a/CPTS/1.Getting Started/Footprinting/2.Web Footprinting.md
+++ b/CPTS/1.Getting Started/Footprinting/2.Web Footprinting.md
@@ -4,3 +4,12 @@ gobuster dir -u http://10.129.42.190/nibbleblog/ --wordlist /usr/share/seclists/
 ```
 ## Important Steps.
 1. Check for default passwords like 'admin:admin' , 'admin:password'
+
+## Bannar Grabbing
+```shell-session
+nc -nv 10.129.42.190 22
+```
+```shell-session
+(UNKNOWN) [10.129.42.190] 22 (ssh) open
+SSH-2.0-OpenSSH_7.2p2 Ubuntu-4ubuntu2.8
+```
