--- a/CPTS/1.Getting Started/Footprinting/1.Nmap.md
+++ b/CPTS/1.Getting Started/Footprinting/1.Nmap.md
@@ -21,3 +21,13 @@ nmap -sC -p 22,80 -oA nibbles_script_scan 10.129.42.190
 nmap -sV --script=http-enum -oA nibbles_nmap_http_enum 10.129.42.190
 ```
 - Can be used to enumerate common web application directories
+
+### What Web (Web Technologies )
+```sh
+$ whatweb http://10.129.200.170/nibbleblog
+
+http://10.129.200.170/nibbleblog [301 Moved Permanently] Apache[2.4.18], Country[RESERVED][ZZ], HTTPServer[Ubuntu Linux][Apache/2.4.18 (Ubuntu)], IP[10.129.200.170], RedirectLocation[http://10.129.200.170/nibbleblog/], Title[301 Moved Permanently]
+http://10.129.200.170/nibbleblog/ [200 OK] Apache[2.4.18], Cookies[PHPSESSID], Country[RESERVED][ZZ], HTML5, HTTPServer[Ubuntu Linux][Apache/2.4.18 (Ubuntu)], IP[10.129.200.170], JQuery, MetaGenerator[Nibbleblog], PoweredBy[Nibbleblog], Script, Title[Nibbles - Yum yum]
+```
+
+#tip Look for default password of the tech like nibbleblog in my case.
