--- a/CPTS/2.Network Scanning with Nmap/0.Basics.md
+++ b/CPTS/2.Network Scanning with Nmap/0.Basics.md
@@ -10,3 +10,11 @@ nmap <scan types> <options> <target>
 	- If our target sends a `SYN-ACK` flagged packet back to us, Nmap detects that the port is `open`.
 	- If the target responds with an `RST` flagged packet, it is an indicator that the port is `closed`.
 	- If Nmap does not receive a packet back, it will display it as `filtered`. Depending on the firewall configuration, certain packets may be dropped or ignored by the firewall.
+
+## Simple TCP Connect Scan
+
+Using Ping to identify the open ports
+
+```sh
+nmap -sT 10.129.108.229
+```
